Tue Sep 14 11:30:18 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_doxygen.pl:
        * html/index.html:
          Removed pss

Tue Sep 14 09:41:06 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debian/mpc-ace.install:
          Don't use environment variables

        * protocols/ace/HTBP/HTBP_Filter.h:
          Added missing includes

Tue Sep 14 09:36:06 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/make_release.py:
          Updated generation of dsc file

        * protocols/examples/RMCast/Send_Msg/Sender.cpp:
        * protocols/tests/RMCast/Sender.cpp:
        * tests/Based_Pointer_Test.cpp:
        * tests/SSL/Bug_2912_Regression_Test.cpp:
          Added missing includes

Mon Sep 13 18:15:27 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

          *:
          Zapped trailing whitespaces using
          find -name \*.h -o -name \*.cpp -name \*.inl | xargs perl -i -pe's/\s+\n/\n/'

Mon Sep 13 14:04:48 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        Reverted change below, not correct given new info from Adam

        Thu Sep  9 11:49:30 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/templates/gnu.mpd:
          Removed invalid comma, thanks to Frank Preischl
          <Frank dot Preischl at ids dot de> for reporting this

        * debian/debian.rules:
        * debian/mpc-ace.install:
          Improved

Mon Sep 13 09:25:22 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_doxygen.pl:
          Updated for DAnCE move

        * ace/ETCL/ETCL_Constraint.cpp:
        * ace/ETCL/ETCL_l.cpp.diff:
        * ace/ETCL/ETCL_l.cpp:
        * ace/Makefile.am:
        * ace/Thread_Control.inl:
        * ace/ace.mpc:
        * ace/ace_for_tao.mpc:
        * apps/JAWS3/bench/average.cpp:
        * apps/JAWS3/bench/mkfiles.cpp:
        * apps/JAWS3/bench/rqfiles.cpp:
        * apps/JAWS3/http/HTTP_Data.h: