@@ -208,13 +208,8 @@
     </li>
 
     <li>
-      <p><a href="libdance-doc/index.html">DAnCE:</a> CIAO's
-      Deployment and Configuration Engine.</p>
-    </li>
-
-    <li>
-      <p><a href="libciao-doc/tools/config_handlers/index.html">Config Handlers:</a> CIAO's
-      Config Handlers.</p>
+      <p><a href="libdance-doc/index.html">DAnCE:</a> DAnCE
+      (Deployment and Configuration Engine).</p>
     </li>
 
     <li>
