@@ -1,3 +1,9 @@
+Tue Sep 14 11:31:42 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * bin/generate_doxygen.pl:
+        * html/index.html:
+          Removed ciao config handlers
+
 Tue Sep 14 11:30:18 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * bin/generate_doxygen.pl:
